.metadata/.plugins/org.eclipse.cdt.ui/rogue-522+.build.log
16:01:20 **** Incremental Build of configuration Default for project rogue-522+ ****
make all 
gcc -c -O3 -w io.c
gcc -c -O3 -w list.c
gcc -c -O3 -w main.c
main.c:206:23: error: too many arguments to function call, expected 2, have 3
    daemon(doctor, 0, AFTER);
    ~~~~~~            ^~~~~
./rogue.h:120:16: note: expanded from macro 'AFTER'
#define AFTER           spread(2)
                        ^~~~~~~~~
/usr/include/stdlib.h:267:1: note: 'daemon' declared here
int      daemon(int, int) __DARWIN_1050(daemon) __OSX_AVAILABLE_BUT_DEPRECATED_MSG(__MAC_10_0, __MAC_10_5, __IPHONE_2_0, __IPHONE_2_0, "Use posix_spawn APIs instead.") __WATCHOS_PROHIBITED __TVOS_PROHIBITED;
^
main.c:208:24: error: too many arguments to function call, expected 2, have 3
    daemon(stomach, 0, AFTER);
    ~~~~~~             ^~~~~
./rogue.h:120:16: note: expanded from macro 'AFTER'
#define AFTER           spread(2)
                        ^~~~~~~~~
/usr/include/stdlib.h:267:1: note: 'daemon' declared here
int      daemon(int, int) __DARWIN_1050(daemon) __OSX_AVAILABLE_BUT_DEPRECATED_MSG(__MAC_10_0, __MAC_10_5, __IPHONE_2_0, __IPHONE_2_0, "Use posix_spawn APIs instead.") __WATCHOS_PROHIBITED __TVOS_PROHIBITED;
^
main.c:209:24: error: too many arguments to function call, expected 2, have 3
    daemon(runners, 0, AFTER);
    ~~~~~~             ^~~~~
./rogue.h:120:16: note: expanded from macro 'AFTER'
#define AFTER           spread(2)
                        ^~~~~~~~~
/usr/include/stdlib.h:267:1: note: 'daemon' declared here
int      daemon(int, int) __DARWIN_1050(daemon) __OSX_AVAILABLE_BUT_DEPRECATED_MSG(__MAC_10_0, __MAC_10_5, __IPHONE_2_0, __IPHONE_2_0, "Use posix_spawn APIs instead.") __WATCHOS_PROHIBITED __TVOS_PROHIBITED;
^
3 errors generated.
make: *** [main.o] Error 1

16:01:20 Build Finished (took 173ms)

